--- a/index.html
+++ b/index.html
@@ -210,27 +210,27 @@ footer {
             <h2>My current available prints:</h2><br>
             <div class="row">
                 <div class="column">
-                    <a href="/1.html"><img src="images/1.JPG" width="45%" height="auto"></a>
-                    <a href="/2.html"><img src="images/2.JPG" width="45%" height="auto"></a>
+                    <a href="/home/1.html"><img src="images/1.JPG" width="45%" height="auto"></a>
+                    <a href="/home/2.html"><img src="images/2.JPG" width="45%" height="auto"></a>
                 </div>
                 <div class="column">
-                    <a href="/3.html"><img src="images/3.JPG" width="45%" height="auto"></a>
-                    <a href="/4.html"><img src="images/4.JPG" width="45%" height="auto"></a>
+                    <a href="/home/3.html"><img src="images/3.JPG" width="45%" height="auto"></a>
+                    <a href="/home/4.html"><img src="images/4.JPG" width="45%" height="auto"></a>
                 </div>
                 <div class="column">
-                    <a href="/5.html"><img src="images/5.JPG" width="45%" height="auto"></a>
-                    <a href="/6.html"><img src="images/6.JPG" width="45%" height="auto"></a>
+                    <a href="/home/5.html"><img src="images/5.JPG" width="45%" height="auto"></a>
+                    <a href="/home/6.html"><img src="images/6.JPG" width="45%" height="auto"></a>
                 </div>
                 <div class="column">
-                    <a href="/7.html"><img src="images/7.JPG" width="45%" height="auto"></a>
-                    <a href="/8.html"><img src="images/8.JPG" width="45%" height="auto"></a>
+                    <a href="/home/7.html"><img src="images/7.JPG" width="45%" height="auto"></a>
+                    <a href="/home/8.html"><img src="images/8.JPG" width="45%" height="auto"></a>
                 </div>
                 <div class="column">
-                    <a href="/9.html"><img src="images/9.JPG" width="45%" height="auto"></a>
-                    <a href="/10.html"><img src="images/10.JPG" width="45%" height="auto"></a>
+                    <a href="/home/9.html"><img src="images/9.JPG" width="45%" height="auto"></a>
+                    <a href="/home/10.html"><img src="images/10.JPG" width="45%" height="auto"></a>
                 </div>
                 <div class="column">
-                    <a href="/11.html"><img src="images/11.JPG" width="45%" height="auto"></a>
+                    <a href="/home/11.html"><img src="images/11.JPG" width="45%" height="auto"></a>
                 </div>
             </div>
             <br>
