--- a/10.html
+++ b/10.html
@@ -161,7 +161,7 @@ footer {
             <br><br><br>
         <div class="text-box">
             <h2>Are you thinking of purchasing this print?</h2>
-            <h3>Contact Joseph <a href="/home/contact.html">here</a> to discuss purchasing and shipping options!</h3>
+            <h3>Contact Joseph <a href="/home/#contact">here</a> to discuss purchasing and shipping options!</h3>
         </div>
         <br><br><br>
     </main>
