Updated contact info.

--- a/index.html
+++ b/index.html
@@ -322,11 +322,11 @@ footer {
             </div>
             <br>
             <ul>
-                <li class="contact-method"><i class="fas fa-envelope"></i>Email: josephmcbreartyphotography@gmail.com</li><br><br>
-                <li class="contact-method"><i class="fab fa-tiktok"></i>TikTok: @josephmcbphotography</li><br><br>
-                <li class="contact-method"><i class="fab fa-instagram"></i>Instagram: @josephmcbphotography</li><br><br>
-                <li class="contact-method"><i class="fas fa-camera"></i>JetPhotos: @josephmcbphotography</li><br><br>
-                <li class="contact-method"><i class="fab fa-github"></i>GitHub: @josephmcb</li><br><br>
+                <li class="contact-method"><i class="fas fa-envelope"></i>Email: <a href="mailto:josephmcbreartyphotography@gmail.com">josephmcbreartyphotography@gmail.com</a></li><br><br>
+                <li class="contact-method"><i class="fab fa-tiktok"></i>TikTok: @<a href="https://www.tiktok.com/@josephmcbphotography">josephmcbphotography</a></li><br><br>
+                <li class="contact-method"><i class="fab fa-instagram"></i>Instagram: @<a href="https://www.instagram.com/josephmcbphotography/">josephmcbphotography</a></li><br><br>
+                <li class="contact-method"><i class="fas fa-camera"></i>JetPhotos: @<a href="https://www.jetphotos.com/photographer/386058">josephmcbphotography</a></li><br><br>
+                <li class="contact-method"><i class="fab fa-github"></i>GitHub: @<a href="https://github.com/josephmcb">josephmcb</a></li><br><br>
             </ul>
     
             <div class="text-box">
