--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ footer {
 
     <section id="prints">
         <div class="text-box">
-            <h2>My current available prints:</h2><br>
+            <h1>My currently available prints:</h1><br>
             <div class="row">
                 <div class="column">
                     <a href="https://josephmcb.github.io/home/1.html"><img src="images/1.JPG" width="45%" height="auto"></a>
@@ -316,10 +316,9 @@ footer {
 
         <section id="contact">
             <div class="text-box">
-                <h2>Contact Me</h2>
+                <h1>Contact Me</h1>
                 <h4>Have questions or suggestions? Reach out to me via any of my socials below!</h4><br>
                 <h5>* If you are thinking of purchasing one of my prints, please DM me on Instagram to continue.</h5>
-            </div>
             <br>
             <ul>
                 <li class="contact-method"><i class="fas fa-envelope"></i>Email: <a href="mailto:josephmcbreartyphotography@gmail.com">josephmcbreartyphotography@gmail.com</a></li><br><br>
@@ -327,9 +326,7 @@ footer {
                 <li class="contact-method"><i class="fab fa-instagram"></i>Instagram: @<a href="https://www.instagram.com/josephmcbphotography/">josephmcbphotography</a></li><br><br>
                 <li class="contact-method"><i class="fas fa-camera"></i>JetPhotos: @<a href="https://www.jetphotos.com/photographer/386058">josephmcbphotography</a></li><br><br>
                 <li class="contact-method"><i class="fab fa-github"></i>GitHub: @<a href="https://github.com/josephmcb">josephmcb</a></li><br><br>
-            </ul>
-    
-            <div class="text-box">
+            </ul><br>
                 <h2>Contact Form</h2><br>
                 <form action="https://formspree.io/f/meqyodrj" method="post" onsubmit="clearForm()">
                     <label for="name">Name:</label>
