--- a/4.html
+++ b/4.html
@@ -18,8 +18,7 @@ body {
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
-    background-image: url(images/Background.JPG);
+    background-color: #8FB8D4;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
