--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
             margin: 0;
             padding: 0;
             font-family: 'Arial', sans-serif;
-            background-color: #3498db;
+            background-color: #8FB8D4;
             color: #fff;
             display: flex;
             flex-direction: column;
