text wording tweak

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@ footer {
             <div class="text-box">
                 <h1>Contact Me</h1>
                 <h4>Have questions or suggestions? Reach out to me via any of my socials below!</h4><br>
-                <h5>* If you are thinking of purchasing one of my prints, please DM me on Instagram to continue.</h5>
+                <h5>* If you are thinking of purchasing one of my prints, please DM me on Instagram to start the buying process.</h5>
             <br>
             <ul>
                 <li class="contact-method"><i class="fas fa-envelope"></i>Email: <a href="mailto:josephmcbreartyphotography@gmail.com">josephmcbreartyphotography@gmail.com</a></li><br><br>
