Minor change (Yes, again)

--- a/index.html
+++ b/index.html
@@ -26,16 +26,11 @@ body {
     color: yellow;
 }
 
-header {
-    background-color: #333;
-    color: #fff;
-    padding: 1em;
-    text-align: center;
-}
-
 nav {
     background-color: white;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
+    position: fixed;
+    width: 100%;
 }
 
 nav ul {
@@ -134,7 +129,7 @@ footer {
 
 #notification-banner {
     position: fixed;
-    top: 20px;
+    top: 55px;
     left: 50%;
     width: 80%;
     transform: translateX(-50%);
@@ -270,8 +265,8 @@ footer {
         </ul>        
     </nav>
 
-    <main>
-    <section id="home">
+    <main><br><br>
+    <section id="home"><br>
         <div class="text-box">
             <h2>Welcome to Joseph McB's website!</h2>
             <h4>Here you will be able to view, browse, and select your high-quality print of choice to be send directly to you!</h4>
@@ -281,7 +276,7 @@ footer {
 
         <br><br>
 
-    <section id="prints">
+    <section id="prints"><br>
         <div class="text-box">
             <h1>My currently available prints:</h1><br>
             <div class="row">
@@ -314,11 +309,11 @@ footer {
             <h3>Click on an image to learn more.</h3>
         </div><br><br><br><br>
 
-        <section id="contact">
+        <section id="contact"><br>
             <div class="text-box">
                 <h1>Contact Me</h1>
                 <h4>Have questions or suggestions? Reach out to me via any of my socials below!</h4><br>
-                <h5>* If you are thinking of purchasing one of my prints, please DM me on Instagram to start the buying process.</h5>
+                <h5>* If you are thinking of purchasing one of my prints, please DM me on Instagram to continue.</h5>
             <br>
             <ul>
                 <li class="contact-method"><i class="fas fa-envelope"></i>Email: <a href="mailto:josephmcbreartyphotography@gmail.com">josephmcbreartyphotography@gmail.com</a></li><br><br>
