Updated URL's to new domain!

--- a/10.html
+++ b/10.html
@@ -135,13 +135,13 @@ footer {
     <nav>
         <ul class="sidebar">
             <li onclick=hideSidebar()><a href=""><h1><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 -960 960 960" width="26"><path d="m249-207-42-42 231-231-231-231 42-42 231 231 231-231 42 42-231 231 231 231-42 42-231-231-231 231Z"/></svg></h1></a></li>
-            <li><a href="/home/9.html"><b>Previous Print</b></a></li>
-            <li><a href="/home/11.html"><b>Next Print</b></a></li>
+            <li><a href="/9"><b>Previous Print</b></a></li>
+            <li><a href="/11"><b>Next Print</b></a></li>
         </ul>
         <ul>
             <li><a href="/home"><h1>Joseph McB Prints</h1></a></li>
-            <li class="hideOnMobile"><a href="/home/9.html"><b>Previous Print</b></a></li>
-            <li class="hideOnMobile"><a href="/home/11.html"><b>Next Print</b></a></li>
+            <li class="hideOnMobile"><a href="/9"><b>Previous Print</b></a></li>
+            <li class="hideOnMobile"><a href="/11"><b>Next Print</b></a></li>
             <li class="menu-button" onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 -960 960 960" width="26"><path d="M120-240v-60h720v60H120Zm0-210v-60h720v60H120Zm0-210v-60h720v60H120Z"/></svg></svg></svg></a></li>
         </ul>        
     </nav>
