fixed minor url issue

--- a/index.html
+++ b/index.html
@@ -281,27 +281,27 @@ footer {
             <h1>My currently available prints:</h1><br>
             <div class="row">
                 <div class="column">
-                    <a href="https://josephmcb.github.io/home/1.html"><img src="images/1.JPG" width="45%" height="auto"></a>
-                    <a href="https://josephmcb.github.io/home/2.html"><img src="images/2.JPG" width="45%" height="auto"></a>
+                    <a href="/1"><img src="images/1.JPG" width="45%" height="auto"></a>
+                    <a href="/2"><img src="images/2.JPG" width="45%" height="auto"></a>
                 </div>
                 <div class="column">
-                    <a href="https://josephmcb.github.io/home/3.html"><img src="images/3.JPG" width="45%" height="auto"></a>
-                    <a href="https://josephmcb.github.io/home/4.html"><img src="images/4.JPG" width="45%" height="auto"></a>
+                    <a href="/3"><img src="images/3.JPG" width="45%" height="auto"></a>
+                    <a href="/4"><img src="images/4.JPG" width="45%" height="auto"></a>
                 </div>
                 <div class="column">
-                    <a href="https://josephmcb.github.io/home/5.html"><img src="images/5.JPG" width="45%" height="auto"></a>
-                    <a href="https://josephmcb.github.io/home/6.html"><img src="images/6.JPG" width="45%" height="auto"></a>
+                    <a href="/5"><img src="images/5.JPG" width="45%" height="auto"></a>
+                    <a href="/6"><img src="images/6.JPG" width="45%" height="auto"></a>
                 </div>
                 <div class="column">
-                    <a href="https://josephmcb.github.io/home/7.html"><img src="images/7.JPG" width="45%" height="auto"></a>
-                    <a href="https://josephmcb.github.io/home/8.html"><img src="images/8.JPG" width="45%" height="auto"></a>
+                    <a href="/7"><img src="images/7.JPG" width="45%" height="auto"></a>
+                    <a href="/8"><img src="images/8.JPG" width="45%" height="auto"></a>
                 </div>
                 <div class="column">
-                    <a href="https://josephmcb.github.io/home/9.html"><img src="images/9.JPG" width="45%" height="auto"></a>
-                    <a href="https://josephmcb.github.io/home/10.html"><img src="images/10.JPG" width="45%" height="auto"></a>
+                    <a href="/9"><img src="images/9.JPG" width="45%" height="auto"></a>
+                    <a href="/10"><img src="images/10.JPG" width="45%" height="auto"></a>
                 </div>
                 <div class="column">
-                    <a href="https://josephmcb.github.io/home/11.html"><img src="images/11.JPG" width="45%" height="auto"></a>
+                    <a href="/11"><img src="images/11.JPG" width="45%" height="auto"></a>
                 </div>
             </div><br>
         </div>
