hoepfully fixed issue

--- a/9.html
+++ b/9.html
@@ -139,7 +139,7 @@ footer {
             <li><a href="/10"><b>Next Print</b></a></li>
         </ul>
         <ul>
-            <li><a href="/home"><h1>Joseph McB Prints</h1></a></li>
+            <li><a href="http://www.josephmcbprints.com/"><h1>Joseph McB Prints</h1></a></li>
             <li class="hideOnMobile"><a href="/8"><b>Previous Print</b></a></li>
             <li class="hideOnMobile"><a href="/10"><b>Next Print</b></a></li>
             <li class="menu-button" onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 -960 960 960" width="26"><path d="M120-240v-60h720v60H120Zm0-210v-60h720v60H120Zm0-210v-60h720v60H120Z"/></svg></svg></svg></a></li>
@@ -160,7 +160,7 @@ footer {
             <br><br><br>
         <div class="text-box">
             <h2>Are you thinking of purchasing this print?</h2>
-            <h3>Contact Joseph <a href="/home/#contact">here</a> to discuss purchasing and shipping options!</h3>
+            <h3>Contact Joseph <a href="http://www.josephmcbprints.com/#contact">here</a> to discuss purchasing and shipping options!</h3>
         </div>
         <br><br><br>
     </main>
