--- a/9.html
+++ b/9.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Print 9 | JosephMcB Prints</title>
-        <link rel="icon" href="images/Logo.JPG" type="image/x-icon">
+        <link rel="icon" href="images/Logo.png" type="image/x-icon">
 </head>
 <style>
     * {
@@ -153,7 +153,7 @@ footer {
             <br>
         <div class="text-box">
             <img src="images/9.JPG" width="100%" height="auto"><br><br>
-            <h1>$34.99 NZD</h1>
+            <h1>$34.99 NZD <small>- Includes shipping to <u>anywhere</u> in NZ!</small></h1><br><h2>Description:</h2>
             <h3>The newest Airbus A321neo added to Air New Zealand's fleet (ZK-OYD) on ground outside the Air New Zealand hangar on a cold summer morning!</h3><br>
             <h5>* All photos come without a watermark</h5>
         </div>
