--- a/8.html
+++ b/8.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Print 8 | JosephMcB Prints</title>
-        <link rel="icon" href="images/Logo.JPG" type="image/x-icon">
+        <link rel="icon" href="images/Logo.png" type="image/x-icon">
 </head>
 <style>
     * {
@@ -153,7 +153,7 @@ footer {
             <br>
         <div class="text-box">
             <img src="images/8.JPG" width="100%" height="auto"><br><br>
-            <h1>$34.99 NZD</h1>
+            <h1>$34.99 NZD <small>- Includes shipping to <u>anywhere</u> in NZ!</small></h1><br><h2>Description:</h2>
             <h3>A Canterbury Aero Club Partenavia P.68C turning on it's engines at Christchurch International Airport on a sunny day!</h3><br>
             <h5>* All photos come without a watermark</h5>
         </div>
