--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Home | JosephMcB Prints</title>
-        <link rel="icon" href="images/Logo.JPG" type="image/x-icon">
+        <link rel="icon" href="images/Logo.png" type="image/x-icon">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <style>
@@ -269,8 +269,8 @@ footer {
     <section id="home"><br>
         <div class="text-box">
             <h2>Welcome to Joseph McB's website!</h2>
-            <h4>Here you will be able to view, browse, and select your high-quality print of choice to be send directly to you!</h4>
-            <h5>All prints are images taken by Joseph, no other photographer can sell or upload images here.</h5>
+            <h4>Here you will be able to view, browse, and select your high-quality print of choice to be send directly to you!</h4><br>
+            <h5>* All prints are images taken by JosephMcB, no other photographer can sell or upload images here.</h5>
         </div>
     </section>
 
