--- a/12.html
+++ b/12.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Print 8 | JosephMcB Prints</title>
+        <title>Print 12 | JosephMcB Prints</title>
         <link rel="icon" href="images/Logo.png" type="image/x-icon">
 </head>
 <style>
@@ -135,26 +135,26 @@ footer {
     <nav>
         <ul class="sidebar">
             <li onclick=hideSidebar()><a href=""><h1><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 -960 960 960" width="26"><path d="m249-207-42-42 231-231-231-231 42-42 231 231 231-231 42 42-231 231 231 231-42 42-231-231-231 231Z"/></svg></h1></a></li>
-            <li><a href="/7"><b>Previous Print</b></a></li>
-            <li><a href="/9"><b>Next Print</b></a></li>
+            <li><a href="/11"><b>Previous Print</b></a></li>
+            <li><a href="/13"><b>Next Print</b></a></li>
         </ul>
         <ul>
             <li><a href="http://www.josephmcbprints.com/"><h1>Back to Home</h1></a></li>
-            <li class="hideOnMobile"><a href="/7"><b>Previous Print</b></a></li>
-            <li class="hideOnMobile"><a href="/9"><b>Next Print</b></a></li>
+            <li class="hideOnMobile"><a href="/11"><b>Previous Print</b></a></li>
+            <li class="hideOnMobile"><a href="/13"><b>Next Print</b></a></li>
             <li class="menu-button" onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 -960 960 960" width="26"><path d="M120-240v-60h720v60H120Zm0-210v-60h720v60H120Zm0-210v-60h720v60H120Z"/></svg></svg></svg></a></li>
         </ul>        
     </nav>
 
     <main>
         <div class="text-box">
-            <h1>Print 8</h1>
+            <h1>Print 12</h1>
         </div>
             <br>
         <div class="text-box">
-            <img src="images/8.JPG" width="100%" height="auto"><br><br>
+            <img src="images/12.JPG" width="100%" height="auto"><br><br>
             <h1>$34.99 NZD <small>- Includes shipping to <u>anywhere</u> in NZ!</small></h1><br><h2>Description:</h2>
-            <h3>A Canterbury Aero Club Partenavia P.68C turning on it's engines at Christchurch International Airport on a sunny day!</h3><br>
+            <h3>An Air New Zealand A320 landing on runway 02 on a breezy summer morning!</h3><br>
             <h5>* All photos come without a watermark</h5>
         </div>
             <br><br><br>
