--- a/1.html
+++ b/1.html
@@ -135,12 +135,12 @@ footer {
     <nav>
         <ul class="sidebar">
             <li onclick=hideSidebar()><a href=""><h1><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 -960 960 960" width="26"><path d="m249-207-42-42 231-231-231-231 42-42 231 231 231-231 42 42-231 231 231 231-42 42-231-231-231 231Z"/></svg></h1></a></li>
-            <li><a href="/11"><b>Previous Print</b></a></li>
+            <li><a href="/16"><b>Previous Print</b></a></li>
             <li><a href="/2"><b>Next Print</b></a></li>
         </ul>
         <ul>
-            <li><a href="http://www.josephmcbprints.com/"><h1>Joseph McB Prints</h1></a></li>
-            <li class="hideOnMobile"><a href="/11"><b>Previous Print</b></a></li>
+            <li><a href="http://www.josephmcbprints.com/"><h1>Back to Home</h1></a></li>
+            <li class="hideOnMobile"><a href="/16"><b>Previous Print</b></a></li>
             <li class="hideOnMobile"><a href="/2"><b>Next Print</b></a></li>
             <li class="menu-button" onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 -960 960 960" width="26"><path d="M120-240v-60h720v60H120Zm0-210v-60h720v60H120Zm0-210v-60h720v60H120Z"/></svg></svg></svg></a></li>
         </ul>        
