--- a/7.html
+++ b/7.html
@@ -139,7 +139,7 @@ footer {
             <li><a href="/8"><b>Next Print</b></a></li>
         </ul>
         <ul>
-            <li><a href="http://www.josephmcbprints.com/"><h1>Joseph McB Prints</h1></a></li>
+            <li><a href="http://www.josephmcbprints.com/"><h1>Back to Home</h1></a></li>
             <li class="hideOnMobile"><a href="/6"><b>Previous Print</b></a></li>
             <li class="hideOnMobile"><a href="/8"><b>Next Print</b></a></li>
             <li class="menu-button" onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 -960 960 960" width="26"><path d="M120-240v-60h720v60H120Zm0-210v-60h720v60H120Zm0-210v-60h720v60H120Z"/></svg></svg></svg></a></li>
