--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@ main {
 
 .skip-button {
             display: inline-block;
-            padding: 10px 209px;
+            padding: 10px 20px;
+            width: fit-content;
             background-color: white;
             color: #4A4F54;
             text-decoration: none;
