--- a/index.html
+++ b/index.html
@@ -295,12 +295,12 @@ footer {
     <section id="about"><br><br>
         <div class="text-box">
             <h2>About Me</h2>
-            <p>At 11 years-old, I, Joseph, developed a passion for aviation. In the first half of 2023, I captured aircraft photos on my phone, including Air NZ Boeing 787 and 777 that had diverted to Christchurch due to Auckland Airport flooding. On the same day, I spotted a 30-year special National 747 livery, a China Airlines Cargo 777 or A350, and 2 USAF KC-135 tankers.</p><br>
+            <p>At 11 years old, I, Joseph, developed a passion for aviation. In the first half of 2023, I captured aircraft photos on my phone, including Air NZ Boeing 787 and 777 that had diverted to Christchurch due to Auckland Airport flooding. On the same day, I spotted a 30-year special National 747 livery, a China Airlines Cargo 777 or A350, and 2 USAF KC-135 tankers.</p><br>
             <p>I upgraded to a 14-year-old Nikon D3100 DSLR in June, enhancing my photography skills by editing and shooting in non-backlit places. Throughout 2023, I spotted rare planes like an ANA 787-9 Dreamliner transporting the Japanese football team for the Fifa World Cup, a USCG HC-130J, a National 747, and a Qantas A330.</p><br>
             <p>During a free flight to Blenheim, I was with Tom Heslop in the cockpit. Later, I spotted a USAF LC-130 and rare aircraft like a NASA C-130. After a Disney Cruise in Auckland, I saw Air NZ 787 and 777, Air Canada 777, Air Chathams Swearing Metroliner, and Saab 340B.</p><br>
             <p>In December, I used a friend's Canon EOS 200D Mark II. In 2024, I spotted a USAF McDonnell Douglas KC-10A Extender, met the co-pilot, and received a cool patch. Recently, I spotted a Qantas freight A330-202 in Christchurch for the first time.</p><br>
             <p>I sell prints to share my work nationwide, emphasizing passion over profit. In 2023, I gained endorsements from airlines and Christchurch Airport. Featured in the Air NZ magazine, reposted on Christchurch Airport's Instagram page three times, followed by GCH Aviation, and featured on various airline Instagram stories.</p><br>
-            <p>With my Nikon D3100, I achieved three photos on Jetphotos, a significant accomplishment given the camera's limitations.</p><br>
+            <p>With my Nikon D3100, I achieved four photos on Jetphotos, a significant accomplishment given the camera's limitations.</p><br>
             <div class="skip-button">
                 <h3><a href="#prints">Click here</a> to skip to the "Prints" section</h3>
             </div>
