--- a/about.html
+++ b/about.html
@@ -44,12 +44,9 @@
           <h3>My Gear</h3>
           <ul>
               <h5>Current Gear:</h5>
-              <p>- Nikon D3100 DSLR</p>
-              <p>- Nikkor 55-200mm</p>
-              <p>- Nikkor 18-55mm</p><br>
-              <h5>Future Gear:</h5>
-              <p>- Canon EOS 6D</p>
+              <p>- Canon EOS 200D Mark II</p>
               <p>- Canon EF 70-300mm</p>
+              <p>- Canon EF 18-55mm</p>
           </ul>
         </div>
       
